# Lumen

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  NOTICE  Project.swift  README.md  about.hbs  about.toml  design-qa.md  lumen.icns  package.json  results.tsv  vite.config.js
engine/lumen-engine/: Cargo.toml
engine/lumen-engine/examples/: workspace_recovery_driver.rs
engine/lumen-engine/include/: lumen_engine.h  lumen_settings.h
engine/lumen-engine/src/: audio_ingress.rs  audio_selection.rs  audio_sink.rs  audio_stream.rs  auth.rs  device.rs  engine_ffi.rs  external_ingress.rs  file_store.rs  host_engine.rs  host_identity.rs  launch_request.rs  lib.rs  network_policy.rs  owner.rs  protocol.rs  session_registry.rs  settings.rs  settings_ffi.rs  stream_fleet.rs  stream_session.rs  tests.rs  video_codec.rs  video_colorspace.rs  video_packetization.rs  video_rate.rs  video_timing.rs  workspace_command_payload.rs  workspace_command_recovery.rs  workspace_display.rs  workspace_engine.rs  workspace_engine_ffi.rs  workspace_engine_lifecycle.rs  workspace_engine_production_recovery_tests.rs  workspace_engine_recovery_tests.rs  workspace_engine_tests.rs  workspace_recovery.rs  workspace_recovery_admission.rs  workspace_recovery_cancellation_tests.rs  workspace_recovery_journal.rs  (+3 more)
engine/lumen-engine/src/application/: catalog.rs  document.rs  ffi.rs  mod.rs  model.rs  tests.rs
engine/lumen-engine/src/auth/: authority.rs  ffi.rs  model.rs  support.rs  tests.rs
engine/lumen-engine/src/external_ingress/: continuity.rs  packet.rs
engine/lumen-engine/src/host_runtime/: ffi.rs  mod.rs  process.rs  supervisor.rs
engine/lumen-engine/src/launch_request/: tests.rs
engine/lumen-engine/src/protocol/: hdr_frame_state.rs  hdr_regions.rs  lumen_streaming_v3_provenance.rs  lumen_streaming_v4_provenance.rs  native_input.rs  native_session.rs  native_session_tests.rs  native_transport.rs  native_transport_tests.rs  session_offer.rs  transport_plan.rs
engine/lumen-engine/src/settings/: capability.rs  model.rs  patch.rs  protocol.rs  tests.rs  validation.rs
engine/lumen-host/: Cargo.toml  build.rs
engine/lumen-host/include/: lumen_host.h
engine/lumen-host/resources/: macos-worker-info.plist
engine/lumen-host/src/: authority.rs  config.rs  control.rs  credentials.rs  cursor_mask.rs  discovery.rs  entry.rs  lib.rs  local_settings.rs  main.rs  native_command.rs  native_input.rs  network_ports.rs  platform.rs  platform_feedback.rs  runtime.rs  service.rs  signal.rs  windows_app.rs  windows_service.rs  worker.rs
engine/lumen-host/src/authority/: resource_capabilities.rs
engine/lumen-host/src/control/: auth.rs  discovery.rs  native_session.rs  settings.rs  tests.rs  wake_on_lan.rs
engine/lumen-host/src/media/: mod.rs  native_motion.rs  native_packet.rs  native_packet_tests.rs  native_path.rs  native_video.rs
engine/lumen-host/src/media/native_video/: bit_reader.rs  configuration_record.rs  configuration_tests.rs  h26x.rs  hevc_sps.rs  sps.rs  test_fixtures.rs  tests.rs
engine/lumen-host/src/platform/: application_environment.rs  macos.rs  macos_native_input.rs  portable_process.rs  windows.rs
engine/lumen-host/src/platform/windows/: display_isolation.rs  display_topology.rs  display_topology_tests.rs  driver_abi.rs  input_policy.rs  input_state.rs  media_queue.rs  native_audio.rs  native_capture.rs  native_desktop_input.rs  native_display.rs  native_display_driver.rs  native_display_topology.rs  native_display_topology_apply.rs  native_input.rs  native_lifecycle.rs  native_media.rs  native_pointer_input.rs  native_shell.rs  native_tray.rs  native_video.rs  native_vigem.rs  native_wasapi.rs  process_command_line.rs  tests.rs
engine/lumen-host/src/platform/windows/native_process/: adapter.rs  lifecycle.rs  mod.rs
engine/lumen-host/src/platform_feedback/: tests.rs
engine/lumen-host/src/server/: http.rs  media.rs  mod.rs  quic.rs  tls.rs
engine/lumen-host/src/server/media/: configuration_header_tests.rs
engine/lumen-host/src/service/: tests.rs
engine/lumen-host/src/upnp/: ipv6.rs  mapping.rs  mod.rs  service.rs
engine/lumen-host/tests/: exact_platform_format_contract.rs  windows_virtual_only_source_contract.rs
engine/lumen-host/translations/ja/LC_MESSAGES/: lumen-host.po
engine/lumen-host/translations/ko/LC_MESSAGES/: lumen-host.po
engine/lumen-host/ui/: windows-app.slint
engine/lumen-upnp/: Cargo.toml  README.md
engine/lumen-upnp/src/: lib.rs
src/platform/windows/driver/: CMakeLists.txt  LumenIddCx.vcxproj  README.md
src/platform/windows/driver/core/: Cargo.toml
src/platform/windows/driver/core/src/: abi.rs  lib.rs  state.rs
src/platform/windows/driver/core/tests/: adapter_lifecycle.rs  core_behavior.rs  (+7 more)
src/platform/windows/driver/include/: lumen_driver_abi.h
src/platform/windows/driver/package/: LumenIddCx.inf
src/platform/windows/driver/scripts/: build_windows_driver.ps1  install_windows_driver.ps1  test_driver_boundary.sh  test_windows_driver.ps1  uninstall_windows_driver.ps1
src/platform/windows/driver/shim/: adapter.cpp  driver.cpp  driver.h  frame_processor.cpp  iddcx_callbacks.cpp  io.cpp
src/platform/windows/driver/tests/: abi_layout.cpp  core_harness.cpp  d3d12_video_capability.cpp  run_d3d12_video_capability.cmd  windows_device_io.cpp  windows_device_io.h  windows_device_probes.cpp  windows_device_probes.h  windows_device_qa.cpp  windows_device_stop_restart.cpp  windows_device_stop_restart.h
tools/: CMakeLists.txt  lumen_service.cpp  sunshinesvc.cpp
tools/autoresearch/: eval_host_stream.py  runtime_probe.mm  test_eval_host_stream.py
tools/macos/: test_cold_builds.sh
tools/protocol/: generate_lumen_protocol.py  generate_lumen_streaming_v3.sh  generate_lumen_streaming_v4.sh  test_generate_lumen_protocol.py  test_generate_lumen_streaming_v3.sh  test_generate_lumen_streaming_v4.sh
tools/quality/: lumen_protocol_quality_gate.py  run_lumen_quality_gate.py  test_lumen_protocol_quality_gate.py  test_platform_protocol_adapters.py  test_run_lumen_quality_gate.py  test_windows_protocol_adapter.py
(+421 files in other folders)
