[workspace]
members = [
    "engine/lumen-engine",
    "engine/lumen-host",
    "engine/lumen-upnp",
    "src/platform/windows/driver/core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Skyline-23/Lumen"
rust-version = "1.85"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
