[package]
name = "lumen-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
argon2 = "0.5"
base64 = "0.22"
libc = "0.2"
p256 = { version = "0.13", features = ["ecdsa"] }
prost = "0.14"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tempfile = "3"
