[package]
name = "lumen-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
aes-gcm = "0.10"
futures-util = "0.3"
httparse = "1.10.1"
if-addrs = "0.15"
libc = "0.2"
lumen-engine = { path = "../lumen-engine" }
lumen-upnp = { path = "../lumen-upnp" }
mdns-sd = { version = "0.20.1", default-features = false }
netdev = "0.45"
percent-encoding = "2.3.2"
quinn = { version = "=0.11.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
reed-solomon-erasure = "6.0.0"
rupnp = { version = "3.0.0", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3"
tokio = { version = "1", features = ["net", "rt", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
slint = { version = "=1.13.1", default-features = false, features = [
    "accessibility",
    "backend-winit",
    "compat-1-2",
    "renderer-femtovg",
    "std",
] }
windows-api = { package = "windows", version = "=0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_MediaFoundation",
    "Win32_Media_Multimedia",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Variant",
] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24.0", features = ["highsierra"] }

[build-dependencies]
slint-build = "=1.13.1"

[dev-dependencies]
tempfile = "3"
